@@ -2,13 +2,20 @@ package org.folio.linked.data.test;
 
 import static org.folio.linked.data.test.TestUtil.getJsonNode;
 import static org.folio.linked.data.util.BibframeConstants.AGENT_PRED;
+import static org.folio.linked.data.util.BibframeConstants.APPLICABLE_INSTITUTION_PRED;
+import static org.folio.linked.data.util.BibframeConstants.APPLICABLE_INSTITUTION_URL;
+import static org.folio.linked.data.util.BibframeConstants.APPLIES_TO_PRED;
+import static org.folio.linked.data.util.BibframeConstants.APPLIES_TO_URL;
+import static org.folio.linked.data.util.BibframeConstants.ASSIGNER_PRED;
 import static org.folio.linked.data.util.BibframeConstants.CARRIER_PRED;
 import static org.folio.linked.data.util.BibframeConstants.CARRIER_URL;
 import static org.folio.linked.data.util.BibframeConstants.CONTRIBUTION;
 import static org.folio.linked.data.util.BibframeConstants.CONTRIBUTION_PRED;
 import static org.folio.linked.data.util.BibframeConstants.DATE_PRED;
+import static org.folio.linked.data.util.BibframeConstants.DATE_URL;
 import static org.folio.linked.data.util.BibframeConstants.DIMENSIONS_URL;
 import static org.folio.linked.data.util.BibframeConstants.DISTRIBUTION;
+import static org.folio.linked.data.util.BibframeConstants.ELECTRONIC_LOCATOR_PRED;
 import static org.folio.linked.data.util.BibframeConstants.EXTENT;
 import static org.folio.linked.data.util.BibframeConstants.EXTENT_PRED;
 import static org.folio.linked.data.util.BibframeConstants.IDENTIFIED_BY_PRED;
@@ -17,6 +24,8 @@ import static org.folio.linked.data.util.BibframeConstants.IDENTIFIERS_ISBN;
 import static org.folio.linked.data.util.BibframeConstants.IDENTIFIERS_LCCN;
 import static org.folio.linked.data.util.BibframeConstants.IDENTIFIERS_LOCAL;
 import static org.folio.linked.data.util.BibframeConstants.IDENTIFIERS_OTHER;
+import static org.folio.linked.data.util.BibframeConstants.IMM_ACQUISITION;
+import static org.folio.linked.data.util.BibframeConstants.IMM_ACQUISITION_PRED;
 import static org.folio.linked.data.util.BibframeConstants.INSTANCE;
 import static org.folio.linked.data.util.BibframeConstants.INSTANCE_TITLE;
 import static org.folio.linked.data.util.BibframeConstants.INSTANCE_TITLE_PRED;
@@ -29,10 +38,13 @@ import static org.folio.linked.data.util.BibframeConstants.MANUFACTURE;
 import static org.folio.linked.data.util.BibframeConstants.MEDIA_PRED;
 import static org.folio.linked.data.util.BibframeConstants.MEDIA_URL;
 import static org.folio.linked.data.util.BibframeConstants.MONOGRAPH;
+import static org.folio.linked.data.util.BibframeConstants.NON_SORT_NUM_URL;
 import static org.folio.linked.data.util.BibframeConstants.NOTE;
 import static org.folio.linked.data.util.BibframeConstants.NOTE_PRED;
 import static org.folio.linked.data.util.BibframeConstants.NOTE_URL;
 import static org.folio.linked.data.util.BibframeConstants.PARALLEL_TITLE;
+import static org.folio.linked.data.util.BibframeConstants.PART_NAME_URL;
+import static org.folio.linked.data.util.BibframeConstants.PART_NUMBER_URL;
 import static org.folio.linked.data.util.BibframeConstants.PERSON;
 import static org.folio.linked.data.util.BibframeConstants.PLACE_PRED;
 import static org.folio.linked.data.util.BibframeConstants.PRODUCTION;
@@ -41,6 +53,7 @@ import static org.folio.linked.data.util.BibframeConstants.PROPERTY_LABEL;
 import static org.folio.linked.data.util.BibframeConstants.PROPERTY_URI;
 import static org.folio.linked.data.util.BibframeConstants.PROVISION_ACTIVITY_PRED;
 import static org.folio.linked.data.util.BibframeConstants.PUBLICATION;
+import static org.folio.linked.data.util.BibframeConstants.QUALIFIER_URL;
 import static org.folio.linked.data.util.BibframeConstants.ROLE;
 import static org.folio.linked.data.util.BibframeConstants.ROLE_PRED;
 import static org.folio.linked.data.util.BibframeConstants.ROLE_URL;
@@ -48,11 +61,18 @@ import static org.folio.linked.data.util.BibframeConstants.SAME_AS_PRED;
 import static org.folio.linked.data.util.BibframeConstants.SIMPLE_AGENT_PRED;
 import static org.folio.linked.data.util.BibframeConstants.SIMPLE_DATE_PRED;
 import static org.folio.linked.data.util.BibframeConstants.SIMPLE_PLACE_PRED;
+import static org.folio.linked.data.util.BibframeConstants.STATUS_PRED;
+import static org.folio.linked.data.util.BibframeConstants.SUBTITLE_URL;
+import static org.folio.linked.data.util.BibframeConstants.SUPP_CONTENT_PRED;
+import static org.folio.linked.data.util.BibframeConstants.SUPP_CONTENT_URL;
+import static org.folio.linked.data.util.BibframeConstants.URL_URL;
 import static org.folio.linked.data.util.BibframeConstants.VALUE_URL;
 import static org.folio.linked.data.util.BibframeConstants.VARIANT_TITLE;
+import static org.folio.linked.data.util.BibframeConstants.VARIANT_TYPE_URL;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
@@ -90,9 +110,48 @@ public class MonographTestService {
   }
 
   private Resource createSampleInstance() {
-    var instanceTitle = title("Instance: ", INSTANCE_TITLE);
-    var parallelTitle = title("Parallel: ", PARALLEL_TITLE);
-    var variantTitle = title("Variant: ", VARIANT_TITLE);
+    var instanceTitle = createResource(
+      Map.of(
+        PART_NAME_URL, List.of("Instance: partName"),
+        PART_NUMBER_URL, List.of("Instance: partNumber"),
+        MAIN_TITLE_PRED, List.of("Instance: Laramie holds the range"),
+        NON_SORT_NUM_URL, List.of("Instance: nonSortNum"),
+        SUBTITLE_URL, List.of("Instance: subtitle")
+      ),
+      INSTANCE_TITLE,
+      Collections.emptyMap()
+    );
+    var parallelTitle = createResource(
+      Map.of(
+        PART_NAME_URL, List.of("Parallel: partName"),
+        PART_NUMBER_URL, List.of("Parallel: partNumber"),
+        MAIN_TITLE_PRED, List.of("Parallel: Laramie holds the range"),
+        DATE_URL, List.of("Parallel: date"),
+        SUBTITLE_URL, List.of("Parallel: subtitle")
+      ),
+      PARALLEL_TITLE,
+      Map.of(NOTE_PRED, List.of(createSimpleResource(
+        "Parallel: noteLabel",
+        NOTE,
+        "Parallel: noteUri"
+      )))
+    );
+    var variantTitle = createResource(
+      Map.of(
+        PART_NAME_URL, List.of("Variant: partName"),
+        PART_NUMBER_URL, List.of("Variant: partNumber"),
+        MAIN_TITLE_PRED, List.of("Variant: Laramie holds the range"),
+        DATE_URL, List.of("Variant: date"),
+        SUBTITLE_URL, List.of("Variant: subtitle"),
+        VARIANT_TYPE_URL, List.of("Variant: variantType")
+      ),
+      VARIANT_TITLE,
+      Map.of(NOTE_PRED, List.of(createSimpleResource(
+        "Variant: noteLabel",
+        NOTE,
+        "Variant: noteUri"
+      )))
+    );
 
     var distribution = provisionActivity("Distribution: ", DISTRIBUTION);
     var manufacture = provisionActivity("Manufacture: ", MANUFACTURE);
@@ -122,11 +181,59 @@ public class MonographTestService {
       )
     );
 
-    var ean = identifiedBy(IDENTIFIERS_EAN, "12345670");
-    var isbn = identifiedBy(IDENTIFIERS_ISBN, "12345671");
-    var lccn = identifiedBy(IDENTIFIERS_LCCN, "12345672");
-    var local = identifiedBy(IDENTIFIERS_LOCAL, "12345673");
-    var other = identifiedBy(IDENTIFIERS_OTHER, "12345674");
+    var ean = createResource(
+      Map.of(
+        VALUE_URL, List.of("12345670"),
+        QUALIFIER_URL, List.of("07654321")
+      ),
+      IDENTIFIERS_EAN,
+      Collections.emptyMap()
+    );
+    var isbn = createResource(
+      Map.of(
+        VALUE_URL, List.of("12345671"),
+        QUALIFIER_URL, List.of("17654321"),
+        STATUS_PRED, List.of(Map.of(
+          PROPERTY_ID, "isbnStatusId",
+          PROPERTY_LABEL, "isbnStatusLabel",
+          PROPERTY_URI, "isbnStatusUri")
+        )
+      ),
+      IDENTIFIERS_ISBN,
+      Collections.emptyMap()
+    );
+    var lccn = createResource(
+      Map.of(
+        VALUE_URL, List.of("12345672"),
+        STATUS_PRED, List.of(Map.of(
+          PROPERTY_ID, "lccnStatusId",
+          PROPERTY_LABEL, "lccnStatusLabel",
+          PROPERTY_URI, "lccnStatusUri")
+        )
+      ),
+      IDENTIFIERS_LCCN,
+      Collections.emptyMap()
+    );
+    var local = createResource(
+      Map.of(
+        VALUE_URL, List.of("12345673"),
+        ASSIGNER_PRED, List.of(Map.of(
+          PROPERTY_ID, "assignerId",
+          PROPERTY_LABEL, "assignerLabel",
+          PROPERTY_URI, "assignerUri")
+        )
+      ),
+      IDENTIFIERS_LOCAL,
+      Collections.emptyMap()
+    );
+    var other = createResource(
+      Map.of(
+        VALUE_URL, List.of("12345674"),
+        QUALIFIER_URL, List.of("47654321")
+      ),
+      IDENTIFIERS_OTHER,
+      Collections.emptyMap()
+    );
 
     var note = createSimpleResource(
       "some note",
@@ -137,49 +244,80 @@ public class MonographTestService {
     var extent = createResource(
       Map.of(LABEL_PRED, List.of("vi, 374 pages, 4 unnumbered leaves of plates")),
       EXTENT,
-      Collections.emptyMap()
+      Map.of(
+        NOTE_PRED, List.of(createSimpleResource("extent note label", NOTE, "extent note uri")),
+        APPLIES_TO_PRED, List.of(createSimpleResource("extent appliesTo label", APPLIES_TO_URL, "extent appliesTo uri"))
+      )
     );
 
     var issuance = createSimpleResource(
       "single unit",
-      null,
+      "issuanceId",
       ISSUANCE_URL
     );
 
     var carrier = createSimpleResource(
       "volume",
-      null,
+      "carrierId",
       CARRIER_URL
     );
 
     var media = createSimpleResource(
       "unmediated",
-      null,
+      "mediaId",
       MEDIA_URL
     );
+
+    var supplementaryContent = createSimpleResource(
+      "supplementaryContentLabel",
+      "supplementaryContentId",
+      SUPP_CONTENT_URL
+    );
+
+    var immediateAcquisition = createResource(
+      Map.of(
+        APPLICABLE_INSTITUTION_PRED, List.of(Map.of(
+          PROPERTY_ID, "applicableInstitutionId",
+          PROPERTY_LABEL, "some applicableInstitution",
+          PROPERTY_URI, APPLICABLE_INSTITUTION_URL
+        )),
+        LABEL_PRED, List.of("some immediateAcquisition")
+      ),
+      IMM_ACQUISITION,
+      Collections.emptyMap()
+    );
+
+    var electronicLocator = createResource(
+      Map.of(
+        NOTE_PRED, List.of(Map.of(
+          PROPERTY_ID, NOTE,
+          PROPERTY_LABEL, "electronicLocatorNoteLabel",
+          PROPERTY_URI, "electronicLocatorNoteUri"
+        )),
+        VALUE_URL, List.of("electronicLocatorValue")
+      ),
+      URL_URL,
+      Collections.emptyMap()
+    );
+
+    var pred2OutgoingResources = new LinkedHashMap<String, List<Resource>>();
+    pred2OutgoingResources.put(INSTANCE_TITLE_PRED, List.of(instanceTitle, parallelTitle, variantTitle));
+    pred2OutgoingResources.put(PROVISION_ACTIVITY_PRED, List.of(distribution, manufacture, production, publication));
+    pred2OutgoingResources.put(CONTRIBUTION_PRED, List.of(contrib));
+    pred2OutgoingResources.put(IDENTIFIED_BY_PRED, List.of(ean, isbn, lccn, local, other));
+    pred2OutgoingResources.put(NOTE_PRED, List.of(note));
+    pred2OutgoingResources.put(EXTENT_PRED, List.of(extent));
+    pred2OutgoingResources.put(ISSUANCE_PRED, List.of(issuance));
+    pred2OutgoingResources.put(CARRIER_PRED, List.of(carrier));
+    pred2OutgoingResources.put(MEDIA_PRED, List.of(media));
+    pred2OutgoingResources.put(IMM_ACQUISITION_PRED, List.of(immediateAcquisition));
+    pred2OutgoingResources.put(SUPP_CONTENT_PRED, List.of(supplementaryContent));
+    pred2OutgoingResources.put(ELECTRONIC_LOCATOR_PRED, List.of(electronicLocator));
 
     return createResource(
       Map.of(DIMENSIONS_URL, List.of("20 cm")),
       INSTANCE,
-      Map.of(
-        INSTANCE_TITLE_PRED, List.of(instanceTitle, parallelTitle, variantTitle),
-        PROVISION_ACTIVITY_PRED, List.of(distribution, manufacture, production, publication),
-        CONTRIBUTION_PRED, List.of(contrib),
-        IDENTIFIED_BY_PRED, List.of(ean, isbn, lccn, local, other),
-        NOTE_PRED, List.of(note),
-        EXTENT_PRED, List.of(extent),
-        ISSUANCE_PRED, List.of(issuance),
-        CARRIER_PRED, List.of(carrier),
-        MEDIA_PRED, List.of(media)
-      )
-    );
-  }
-
-  private Resource title(String prefix, String url) {
-    return createResource(
-      Map.of(MAIN_TITLE_PRED, List.of(prefix + "Laramie holds the range")),
-      url,
-      Collections.emptyMap()
+      pred2OutgoingResources
     );
   }
 
@@ -201,14 +339,6 @@ public class MonographTestService {
       prefix + "New York (State)",
       "lc:RT:bf2:Place",
       "http://id.loc.gov/ontologies/bibframe/Place"
-    );
-  }
-
-  private Resource identifiedBy(String type, String value) {
-    return createResource(
-      Map.of(VALUE_URL, List.of(value)),
-      type,
-      Collections.emptyMap()
     );
   }
 
